Add dependency hashes and update FF to name params